# roboticman_controll_movement

./: README.md
rviz/: README.md
rviz/my_robot_description/: CMakeLists.txt  package.xml
rviz/my_robot_description/launch/: display.launch.py
rviz/my_robot_description/meshes/: head197.stl  hips197.stl  left_arm197.stl  left_fingure197.stl  left_leg197.stl  right_arm197.stl  right_fingure197.stl  right_leg197.stl  torso197.stl
rviz/my_robot_description/urdf/: robot197.xacro
rviz/robot197_control/: package.xml  setup.cfg  setup.py
rviz/robot197_control/launch/: bringup.launch.py
rviz/robot197_control/robot197_control/: simple_controller.py
